--- a/client/src/app/views/variants/variants-home/variants-home.page.html
+++ b/client/src/app/views/variants/variants-home/variants-home.page.html
@@ -1,4 +1,6 @@
-<cvc-section-navigation> </cvc-section-navigation>
+<cvc-section-navigation [actionsTpl]="variantActions"> </cvc-section-navigation>
+<ng-template #variantActions>
+</ng-template>
 <nz-page-header class="site-page-header">
 
   <!--content-->
