--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -7,16 +7,16 @@
   <ng-container>
     <nz-table #virtualTable
       nzSize="small"
-      [cvcAutoHeightTable]="27"
-      [nzVirtualForTrackBy]="trackByIndex"
+      [cvcAutoHeightTable]="25"
       [nzVirtualItemSize]="29"
+      [nzVirtualForTrackBy]="trackByIndex"
       [nzData]="evidence$ | ngrxPush"
       [nzLoading]="isLoading"
       [nzScroll]="{ x: '400px', y: '800px' }"
       [nzFrontPagination]="false"
       [nzShowPagination]="false">
       <thead (nzSortOrderChange)="onSortChanged($event)">
-        <tr>
+        <tr class="col-header-row">
           <th nzWidth="25px"
             nzLeft
             *ngIf="mode == 'select'">
@@ -153,6 +153,7 @@
             nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
+              nzSize="small"
               [nzDropdownMatchSelectWidth]="false"
               (ngModelChange)="onModelChanged()"
               [(ngModel)]="evidenceLevelInput">
@@ -172,6 +173,7 @@
             nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
+              nzSize="small"
               [nzDropdownMatchSelectWidth]="false"
               (ngModelChange)="onModelChanged()"
               [(ngModel)]="evidenceTypeInput">
@@ -193,6 +195,7 @@
             nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
+              nzSize="small"
               [nzDropdownMatchSelectWidth]="false"
               [nzDropdownMatchSelectWidth]="false"
               (ngModelChange)="onModelChanged()"
@@ -209,6 +212,7 @@
             nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
+              nzSize="small"
               [nzDropdownMatchSelectWidth]="false"
               (ngModelChange)="onModelChanged()"
               [(ngModel)]="clinicalSignificanceInput">
@@ -266,6 +270,7 @@
             nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
+              nzSize="small"
               [nzDropdownMatchSelectWidth]="false"
               (ngModelChange)="onModelChanged()"
               [(ngModel)]="variantOriginInput">
@@ -287,6 +292,7 @@
             nzRight>
             <nz-select nzAllowClear
               nzPlaceHolder="All"
+              nzSize="small"
               [nzDropdownMatchSelectWidth]="false"
               (ngModelChange)="onModelChanged()"
               [(ngModel)]="evidenceRatingInput">
