--- a/client/src/app/views/variants/variants-home/variants-home.page.html
+++ b/client/src/app/views/variants/variants-home/variants-home.page.html
@@ -6,7 +6,7 @@
       *ngIf="viewer.isEditor"
       nzSize="small"
       nz-popover
-      nzPopoverTitle="Title"
+      nzPopoverTitle="Add New Variant"
       nzPopoverTrigger="click"
       [nzPopoverContent]="addVariantForm"
       nzPopoverPlacement="bottomRight">
