add link to GraphiQL on help page and initial example query with explainer

--- a/client/src/app/views/pages/pages-help/pages-help.page.html
+++ b/client/src/app/views/pages/pages-help/pages-help.page.html
@@ -37,6 +37,9 @@
                   <p>
                     CIViC data can be retrieved using the underlying GraphQL API. The API documentation is available on <a href="https://griffithlab.github.io/civic-v2/" target="_blank">GitHub</a>.
                   </p>
+                  <p>
+                    The GraphiQL user interface found <a href="https://civicdb.org/api/graphiql" target="_blank">here</a> is a good way to get started interacting with the API. You can explore the schema and available queries using the "Docs" explorer found in the upper right.
+                  </p>
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="6">
