--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -363,7 +363,7 @@
                 </cvc-tag-list>
               </div>
               <ng-template #drugsElse>
-                <i>N/A</i>
+              <i nz-typography nzType="secondary">N/A</i>
               </ng-template>
             </td>
             <td nzAlign="center"
