--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -353,7 +353,14 @@
             <div *ngIf="eid.drugs.length > 0; else drugsElse">
               <cvc-tag-list>
                 <ng-container *ngIf="eid.drugs.length > 1">
-                  <nz-tag nz-tooltip [nzTooltipTitle]="eid.drugInteractionType | titlecase">{{ eid.drugInteractionType.substring(0,3) }}</nz-tag>
+                  <nz-tag nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="showTooltips ? (eid.drugInteractionType | drugInteractionEnumDisplay) : ''">
+                    <i nz-icon
+                      style="color: #ac3996"
+                      [nzType]="eid.drugInteractionType | drugInteractionEnumDisplay: 'icon-name'"
+                      class="attribute-icon"></i>
+                  </nz-tag>
                 </ng-container>
                 <ng-container *ngFor="let drug of eid.drugs">
                   <cvc-drug-tag [drug]="drug"
