vargroup table col alignment fix

--- a/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
+++ b/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
@@ -50,7 +50,7 @@
         </th>
       </tr>
       <tr class="filter-row">
-        <th nzLef>
+        <th nzLeft>
           <cvc-clearable-input-filter [(inputModel)]="nameInput"
             placeholderText="Name"
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
