gene-table adjustments, tag-group components to OnPush

--- a/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.html
+++ b/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.html
@@ -6,7 +6,8 @@
   <div [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
     <nz-tag class="overflow-tag" *ngIf="hiddenCount && hiddenCount > 0" nz-popover [nzPopoverMouseEnterDelay]="0.5" (click)="onOverflowClicked()"
       [nzPopoverContent]="additionalTagPopover" nzPopoverPlacement="top" nzPopoverTrigger="hover">
-      +<span *ngIf="matchedHiddenCount > 0">{{matchedHiddenCount}} of </span>{{this.hiddenCount}} more
+      +<span *ngIf="matchedHiddenCount > 0">
+      {{matchedHiddenCount}} of </span>{{this.hiddenCount}}
     </nz-tag>
   </div>
   <ng-template #additionalTagPopover>
