primary entity table counts number-formatted, displaying commas

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -346,7 +346,7 @@
   <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData"
     nz-typography
     nzType="secondary">
-    ({{totalCount}} total, showing {{visibleCount}}<span *ngIf="totalCount && filteredCount < totalCount"> of {{filteredCount}} filtered</span>)
+    ({{ totalCount | number }} total, showing {{ visibleCount | number }}<span *ngIf="totalCount && filteredCount < totalCount"> of {{ filteredCount | number }} filtered</span>)
   </span>
   <ng-template #noData>
     <span nz-typography
