both tag-overflow components working with OnPush in cached table rows

--- a/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.less
+++ b/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.less
@@ -1,3 +1,11 @@
 .matched-tag {
   font-weight: bold
 }
+
+nz-tag.overflow-tag:hover {
+  cursor: help;
+}
+
+.popover-tag-list {
+  max-width: 600px;
+}
