--- a/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.html
+++ b/client/src/app/components/shared/plain-tag-overflow/plain-tag-overflow.component.html
@@ -1,21 +1,29 @@
 <cvc-tag-list size="xs">
-  <div *ngFor="let tag of displayedTags"
+  <span *ngFor="let tag of displayedTags"
     [ngClass]="{'matched-tag': matchingText && tag.toLowerCase().includes(matchingText)}">
     <nz-tag>{{ tag }}</nz-tag>
-  </div>
-  <div [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
-    <nz-tag class="overflow-tag" *ngIf="hiddenCount && hiddenCount > 0" nz-popover [nzPopoverMouseEnterDelay]="0.5" (click)="onOverflowClicked()"
-      [nzPopoverContent]="additionalTagPopover" nzPopoverPlacement="top" nzPopoverTrigger="hover">
+  </span>
+  <span [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
+    <nz-tag class="overflow-tag"
+      *ngIf="hiddenCount && hiddenCount > 0"
+      nz-popover
+      [nzPopoverMouseEnterDelay]="0"
+      [nzPopoverContent]="additionalTagPopover"
+      nzPopoverPlacement="top"
+      nzPopoverTrigger="hover">
       +<span *ngIf="matchedHiddenCount > 0">
-      {{matchedHiddenCount}} of </span>{{this.hiddenCount}}
+      {{matchedHiddenCount}}
+      of </span>{{this.hiddenCount}}
     </nz-tag>
-  </div>
+  </span>
   <ng-template #additionalTagPopover>
-    <cvc-tag-list size="xs">
-      <div *ngFor="let tag of hiddenTags"
-        [ngClass]="{'matched-tag': matchingText && tag.toLowerCase().includes(matchingText)}">
-        <nz-tag>{{ tag }}</nz-tag>
-      </div>
-    </cvc-tag-list>
+    <div class="popover-tag-list">
+      <cvc-tag-list size="xs">
+        <div *ngFor="let tag of hiddenTags"
+          [ngClass]="{'matched-tag': matchingText && tag.toLowerCase().includes(matchingText)}">
+          <nz-tag>{{ tag }}</nz-tag>
+        </div>
+      </cvc-tag-list>
+    </div>
   </ng-template>
 </cvc-tag-list>
