--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -3,10 +3,12 @@
     [ngClass]="{'matched-tag': matchingText && tag.name.toLowerCase().includes(matchingText)}">
     <ng-container [ngSwitch]="tagType">
       <ng-container *ngSwitchCase="'drug'">
-        <cvc-drug-tag [drug]="tag" [truncateLongName]="true"></cvc-drug-tag>
+        <cvc-drug-tag [drug]="tag"
+          [truncateLongName]="true"></cvc-drug-tag>
       </ng-container>
       <ng-container *ngSwitchCase="'disease'">
-        <cvc-disease-tag [disease]="tag" [truncateLongName]="true"></cvc-disease-tag>
+        <cvc-disease-tag [disease]="tag"
+          [truncateLongName]="true"></cvc-disease-tag>
       </ng-container>
       <ng-container *ngSwitchCase="'organization'">
         <cvc-organization-tag [org]="tag"></cvc-organization-tag>
@@ -14,27 +16,37 @@
     </ng-container>
   </div>
   <div [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
-    <nz-tag class="overflow-tag" *ngIf="hiddenCount && hiddenCount > 0" nz-popover [nzPopoverMouseEnterDelay]="0.5" (click)="onOverflowClicked()"
-      [nzPopoverContent]="additionalTagPopover" nzPopoverPlacement="top" nzPopoverTrigger="hover">
-      +<span *ngIf="matchedHiddenCount > 0">{{matchedHiddenCount}} of </span>{{this.hiddenCount}}
+    <nz-tag class="overflow-tag"
+      *ngIf="hiddenCount && hiddenCount > 0"
+      nz-popover
+      [nzPopoverContent]="additionalTagPopover"
+      nzPopoverPlacement="top"
+      nzPopoverTrigger="hover">
+      +<span *ngIf="matchedHiddenCount > 0">
+      {{matchedHiddenCount}}
+      of </span>{{this.hiddenCount}}
     </nz-tag>
   </div>
   <ng-template #additionalTagPopover>
-    <cvc-tag-list size="xs">
-      <div *ngFor="let tag of hiddenTags"
-        [ngClass]="{'matched-tag': matchingText && tag.name.toLowerCase().includes(matchingText)}">
-        <ng-container [ngSwitch]="tagType">
-          <ng-container *ngSwitchCase="'drug'">
-            <cvc-drug-tag [drug]="tag" [truncateLongName]="true"></cvc-drug-tag>
+    <div class="popover-tag-list">
+      <cvc-tag-list size="xs">
+        <div *ngFor="let tag of hiddenTags"
+          [ngClass]="{'matched-tag': matchingText && tag.name.toLowerCase().includes(matchingText)}">
+          <ng-container [ngSwitch]="tagType">
+            <ng-container *ngSwitchCase="'drug'">
+              <cvc-drug-tag [drug]="tag"
+                [truncateLongName]="true"></cvc-drug-tag>
+            </ng-container>
+            <ng-container *ngSwitchCase="'disease'">
+              <cvc-disease-tag [disease]="tag"
+                [truncateLongName]="true"></cvc-disease-tag>
+            </ng-container>
+            <ng-container *ngSwitchCase="'organization'">
+              <cvc-organization-tag [org]="tag"></cvc-organization-tag>
+            </ng-container>
           </ng-container>
-          <ng-container *ngSwitchCase="'disease'">
-            <cvc-disease-tag [disease]="tag" [truncateLongName]="true"></cvc-disease-tag>
-          </ng-container>
-          <ng-container *ngSwitchCase="'organization'">
-            <cvc-organization-tag [org]="tag"></cvc-organization-tag>
-          </ng-container>
-        </ng-container>
-      </div>
-    </cvc-tag-list>
+        </div>
+      </cvc-tag-list>
+    </div>
   </ng-template>
 </cvc-tag-list>
