--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.less
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.less
@@ -1,7 +1,11 @@
-.overflow-tag:hover {
-  cursor: pointer;
-}
-
 .matched-tag {
   font-weight: bold
+}
+
+nz-tag.overflow-tag:hover {
+  cursor: help;
+}
+
+.popover-tag-list {
+  max-width: 600px;
 }
